gravitee-apim-portal-webui/src/app/components/gv-markdown-toc/gv-markdown-toc.component.css
/**
 * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
.page__box {
  height: 100%;
  max-width: 250px;
}

.markdown-toc {
  overflow-y: auto;
}

.page__box-title {
  padding: 2rem;
}
.page__box-content {
  padding: 2rem 1rem;
}

.markdown-toc > .toc-list {
  overflow: hidden;
  position: relative;
}

.markdown-toc > .toc-list li {
  list-style: none;
  line-height: 25px;
  line-break: anywhere;
}

.toc-list {
  margin: 0;
  padding-left: 10px;
}

a.toc-link.is-active-link {
  font-weight: 700;
}
a.toc-link.is-active-link::before {
  background-color: var(--gv-theme-color);
}

a.toc-link {
  text-decoration: none;
  height: 100%;
  cursor: pointer;
  white-space: nowrap;
  box-sizing: border-box;
}

a.toc-link::before {
  background-color: #eee;
  content: ' ';
  display: inline-block;
  height: inherit;
  left: 0;
  margin-top: -1px;
  position: absolute;
  width: 2px;
}

a.toc-link:hover {
  font-weight: 500;
}

a.toc-link:hover::before {
  background-color: var(--gv-theme-color);
}

